--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11976,3 +11976,23 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.auth-main {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.auth-container {
+  width: 80%;
+}
+
+.auth-card {
+  box-sizing: border-box;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
