--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,23 @@
 @import '~bootstrap/scss/bootstrap';
+
+.auth-main {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100vh;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.auth-container{
+    width: 80%;
+}
+
+.auth-card {
+    box-sizing: border-box;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
